login module temp

--- a/Webapp/templates/base.html
+++ b/Webapp/templates/base.html
@@ -26,7 +26,7 @@
             <a href='/about-us' class="nav-link">About Us</a>
         </li>
         <li class="nav-item ml-2">
-            <a href="/register"><button class="btn btn-md btn-danger" >Login/Register</button></a>
+            <a href="/login"><button class="btn btn-md btn-danger" >Login/Register</button></a>
         </li>
     </ul>
     </div>
