--- a/Webapp/templates/registration_form.html
+++ b/Webapp/templates/registration_form.html
@@ -73,6 +73,7 @@
         </div>
           <button class="btn btn-danger btn-block" type="submit">Submit</button>
       </form>
+      <a href="/login">Already have account? Login.</a>
     </div>
   </div>
 </div>
