--- a/Webapp/templates/registration_form.html
+++ b/Webapp/templates/registration_form.html
@@ -1,79 +1,100 @@
 {% extends 'base.html' %} {% block content %}
+{% if form.errors %}
+  {% for field in form %}
+  {% for error in field.errors %}
+  <div class="alert alert-danger">
+    <strong>{{ error|escape }}</strong>
+  </div>
+  {% endfor %}
+  {% endfor %}
+  {% for error in form.non_field_errors %}
+  <div class="alert alert-danger">
+    <strong>{{ error|escape }}</strong>
+  </div>
+  {% endfor %}
+  {% endif %}
 <div class="container text-dark">
   <div class="p-5 justify-content-center">
     <div
       class="p-3 d-flex flex-column border border-danger rounded align-middle"
     >
-      <form>
+      <form action="/user/register/" method="post">
+        {% csrf_token %}
         <div class="row">
           <div class="form-group col-lg-6">
             <label for="first_name">First Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="first_name"
-              placeholder="First Name"
-              name="fname"
-            />
+<!--            <input-->
+<!--              type="text"-->
+<!--              class="form-control"-->
+<!--              id="first_name"-->
+<!--              placeholder="First Name"-->
+<!--              name="fname"-->
+<!--            />-->
+            {{ form.first_name }}
           </div>
           <div class="form-group col-lg-6">
             <label for="last_name">Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="last_name"
-              placeholder="Last Name"
-              name="lname"
-            />
+<!--            <input-->
+<!--              type="text"-->
+<!--              class="form-control"-->
+<!--              id="last_name"-->
+<!--              placeholder="Last Name"-->
+<!--              name="lname"-->
+<!--            />-->
+            {{ form.last_name }}
           </div>
         </div>
         <div class="row">
           <div class="form-group col-lg-6">
             <label for="email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="Email"
-              name="email"
-            />
+<!--            <input-->
+<!--              type="email"-->
+<!--              class="form-control"-->
+<!--              id="email"-->
+<!--              placeholder="Email"-->
+<!--              name="email"-->
+<!--            />-->
+            {{ form.email }}
           </div>
           <div class="form-group col-lg-6">
             <label for="mobile">Mobile Number</label>
-            <input
-              type="tel"
-              class="form-control"
-              id="mobile"
-              placeholder="Mobile Number"
-              name="number"
-            />
+<!--            <input-->
+<!--              type="tel"-->
+<!--              class="form-control"-->
+<!--              id="mobile"-->
+<!--              placeholder="Mobile Number"-->
+<!--              name="number"-->
+<!--            />-->
+            {{ form.username }}
           </div>
         </div>
         <div class="row">
           <div class="form-group col-lg-6">
             <label for="password">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Password"
-              name="password"
-            />
+<!--            <input-->
+<!--              type="password"-->
+<!--              class="form-control"-->
+<!--              id="password"-->
+<!--              placeholder="Password"-->
+<!--              name="password"-->
+<!--            />-->
+            {{ form.password1 }}
           </div>
           <div class="form-group col-lg-6">
             <label for="conpassword">Confirm Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="conpassword"
-              placeholder="Confirm Password"
-              name="cpassword"
-            />
+<!--            <input-->
+<!--              type="password"-->
+<!--              class="form-control"-->
+<!--              id="conpassword"-->
+<!--              placeholder="Confirm Password"-->
+<!--              name="cpassword"-->
+<!--            />-->
+            {{ form.password2 }}
           </div>
         </div>
           <button class="btn btn-danger btn-block" type="submit">Submit</button>
       </form>
-      <a href="/login">Already have account? Login.</a>
+      <a href="/user/login">Already have account? Login.</a>
     </div>
   </div>
 </div>
