--- a/Webapp/templates/login.html
+++ b/Webapp/templates/login.html
@@ -30,7 +30,9 @@
         </div>
           <button class="btn btn-danger btn-block" type="submit">Login</button>
       </form>
-        <a href="/user/register">Don't have account? Register.</a>
+             <a href="/user/register" class="pt-2">Don't have account? Register.</a>
+             <a href="/user/password-reset" class="pt-2">Forgot Password?</a>
+
     </div>
     {% if messages %}
         <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
