--- a/Webapp/templates/user_index.html
+++ b/Webapp/templates/user_index.html
@@ -1,3 +1,29 @@
 {% extends 'base.html' %} {% block content %}
+{% load static %}
+{% static "img" as img %}
+<link rel="stylesheet" href="{% static 'css/user_index.css' %}">
+<div class="container-fluid px-5">
+    <div class="row px-3">
+        {% for card in data %}
+        <div class="col-lg-3 p-5">
+            <a href="profile/" class="text-dark" style="text-decoration:none;">
+                <div class="card shadow-lg bg-light">
+                    <div class="card-img">
+                        <img src="{{img}}/{{card.img}}" alt="" class="card-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="card-title text-center">
+                            <p class="h3">{{ card.title }}</p>
+                        </div>
+                        <div class="card-text">
+                            <p class="h6 text-center">{{ card.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
