--- a/Webapp/static/css/user_index.css
+++ b/Webapp/static/css/user_index.css
@@ -6,9 +6,11 @@
     text-decoration:none;
 }
 .card-img{
-    border-radius:15%;
-    width:100%;
-    display:flex;
+    border-radius:50%;
+    display:block;
+    width:300px;
+    height:300px;
+    object-fit:cover;
     margin:auto;
     box-shadow:0px 10px 7px -5px rgba(0,0,0,0.05);
 }
