--- a/Webapp/templates/user_profile.html
+++ b/Webapp/templates/user_profile.html
@@ -10,7 +10,7 @@
                     <p class="h4">Profile</p>
                 </div>
                 <div class="card-img py-3">
-                    <img src="{% static 'img/aksh004.jpg' %}" class="profile-img">
+                    <img src="{% static 'img/aksh004.jpg' %}" class="card-img">
                 </div>
                 <div class="card-body">
                     <div class="card-title text-center">
