--- a/Webapp/templates/password_reset.html
+++ b/Webapp/templates/password_reset.html
@@ -1,39 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <div class="container text-dark">
   <div class="p-5 justify-content-center row">
     <div
       class="col-lg-6 p-3 d-flex flex-column border border-danger rounded align-middle"
     >
-      <form action="/user/password-reset-done/" method="post">
+        {% if not user.is_authenticated %}
+      <form method="post">
         {% csrf_token %}
         <div class="p-1">
           <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="text"
-              class="form-control"
-              id="email"
-              placeholder="Email"
-              name="email"
-            />
+            {{ form|crispy }}
           </div>
             <button class="btn btn-danger" type="submit">Send email</button>
         </div>
       </form>
         <a href="/user/login" class="p-1">Or Login</a>
     </div>
-    {% if messages %}
-        <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-            {% for msg in messages %}
-            <strong>{{ msg }}</strong>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            {% endfor %}
-        </div>
-    {% endif %}
+        {% else %}
+      <script>window.location.replace("/user/login/");</script>
+      {% endif %}
   </div>
 </div>
 
