--- a/Webapp/static/css/user_index.css
+++ b/Webapp/static/css/user_index.css
@@ -1,16 +1,18 @@
-.card{
-    border-radius:15%;
-    border:none;
+.card {
+  border-radius: 15%;
+  border: none;
+  width: 40vh;
+  margin: auto;
 }
--a{
-    text-decoration:none;
+-a {
+  text-decoration: none;
 }
-.card-img{
-    border-radius:50%;
-    display:block;
-    width:300px;
-    height:300px;
-    object-fit:cover;
-    margin:auto;
-    box-shadow:0px 10px 7px -5px rgba(0,0,0,0.05);
+.card-img {
+  border-radius: 10%;
+  display: block;
+  max-width: none;
+  width: 30vh;  
+  height: 30vh;
+  object-fit: cover;
+  margin: auto;
 }
