--- a/Webapp/templates/password_reset_confirm.html
+++ b/Webapp/templates/password_reset_confirm.html
@@ -1,48 +1,32 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block content %}{% load crispy_forms_tags %}
 
 <div class="container text-dark">
   <div class="p-5 justify-content-center row">
     <div
       class="col-lg-6 p-3 d-flex flex-column border border-danger rounded align-middle"
     >
-      <form action="/user/password-reset-confirm/" method="post">
-        {% csrf_token %}
-        <div class="p-1">
-          <div class="form-group">
-            <label for="password1">New Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password1"
-              placeholder="New Password"
-              name="password1"
-            />
-          </div>
-          <div class="form-group">
-            <label for="password2">Confirm Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password2"
-              placeholder="Confirm Password"
-              name="password2"
-            />
-          </div>
-            <button class="btn btn-danger" type="submit">Reset Password</button>
-        </div>
-      </form>
-    </div>
-    {% if messages %}
-        <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-            {% for msg in messages %}
-            <strong>{{ msg }}</strong>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            {% endfor %}
-        </div>
+    {% if validlink %}
+    <h3>Change password</h3>
+        {% if not user.is_authenticated %}
+    <form method="post">
+      {% csrf_token %}
+      
+      <div class="form-group">
+        {{ form|crispy }}
+      </div>
+      <button class="btn btn-danger" type="submit">Change password</button>
+    </form>
+        {% else %}
+      <script>window.location.replace("http://127.0.0.1:8000/user/login/");</script>
+      {% endif %}
+        {% else %}
+    <h1>Password reset unsuccessful</h1>
+    <p>The password reset link was invalid, <br />
+    possibly because it has already been used. <br />
+    Please request a new password reset.</p>
     {% endif %}
+    </div>
   </div>
 </div>
 
