--- a/Webapp/templates/password_reset_done.html
+++ b/Webapp/templates/password_reset_done.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-
+{% if not user.is_authenticated %}
 <div class="container">
     <div class="text-center">
         <p class="h3 mt-5">
@@ -8,5 +9,7 @@
         </p>
     </div>
 </div>
-
+{% else %}
+      <script>window.location.replace("http://127.0.0.1:8000/user/login/");</script>
+      {% endif %}
 {% endblock %}
