--- a/Webapp/templates/password_reset_message.html
+++ b/Webapp/templates/password_reset_message.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{% load crispy_forms_tags %}
+{% if not user.is_authenticated %}
 <div class="container">
     <div class="text-center">
         <p class="h3 mt-5">
@@ -9,5 +10,7 @@
         <a class="btn btn-danger" href="/user/login">Login</a>
     </div>
 </div>
-
+{% else %}
+      <script>window.location.replace("http://127.0.0.1:8000/user/login/");</script>
+      {% endif %}
 {% endblock %}
