--- a/Webapp/templates/user_profile.html
+++ b/Webapp/templates/user_profile.html
@@ -1,24 +1,62 @@
-{% extends 'base.html' %}
-{% block content %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'css/user_profile.css' %}">
+{% extends 'base.html' %} {% block content %} {% load static %}
+<link rel="stylesheet" href="{% static 'css/user_profile.css' %}" />
 <div class="container">
-    <div class="row" style="height:75vh;">
-        <div class="col-lg-4">
-            <div class="card bg-dark text-light" style="border:none;">
-                <div class="card-header bg-danger">
-                    <p class="h4">Profile</p>
-                </div>
-                <div class="card-img py-3">
-                    <img src="{% static 'img/aksh004.jpg' %}" class="card-img">
-                </div>
-                <div class="card-body">
-                    <div class="card-title text-center">
-                        <p class="h3">Antariksh Sisodiya</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="card-img py-3">
+        <img src="{% static 'img/aksh004.jpg' %}" class="profile-img" />
+      </div>
     </div>
+    <div class="col-lg-6 my-auto">
+      <div class="username dropdown">
+        <p class="h3 ml-3 text-left">Antariksh Sisodiya</p>
+        <i
+          class="my-auto ml-1 mr-5 fas fa-user-edit"
+          type="button"
+          id="dropdownMenuLink"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+        </i>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">Edit profile</a>
+          <a class="dropdown-item" href="#">Change password</a>
+        </div>
+      </div>
+      <br />
+      <div class="row text-center">
+        <div class="col-4 border-right">
+          <div class="card-title h5">Active Order</div>
+          <div class="card-subtitle">6</div>
+        </div>
+        <div class="col-4 border-right">
+          <div class="card-title h5">Total Order</div>
+          <div class="card-subtitle">9</div>
+        </div>
+        <div class="col-4">
+          <div class="card-title h5">Friends</div>
+          <div class="card-subtitle">420</div>
+        </div>
+      </div>
+      <br />
+      <div class="">
+        <div class="d-flex mx-4">
+          <i class="fa fa-phone my-auto" aria-hidden="true"></i>
+          <p class="h6 px-2 ml-1 my-auto">8107227024</p>
+        </div>
+        <div class="d-flex mx-4 mt-3">
+          <i class="fa fa-envelope my-auto" aria-hidden="true"></i>
+          <p class="h6 px-2 my-auto">sisodiyaaksh@gmail.com</p>
+        </div>
+        <div class="d-flex mx-4 mt-3">
+          <i class="fa fa-map-marker my-auto" aria-hidden="true"></i>
+          <p class="h6 px-2 ml-2 my-auto">
+            33 Ramkrupa nagar, Alwanaka, Manjalpur, Vadodra-390011
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
