--- a/Webapp/templates/user_profile.html
+++ b/Webapp/templates/user_profile.html
@@ -20,7 +20,7 @@
         >
         </i>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#">Edit profile</a>
+          <a class="dropdown-item" href="/user/edit-profile">Edit profile</a>
           <a class="dropdown-item" href="#">Change password</a>
         </div>
       </div>
