--- a/Webapp/templates/index.html
+++ b/Webapp/templates/index.html
@@ -16,7 +16,7 @@
                     <label for="Destination">Destination</label>
                     <input type="text" id="Destination" class="form-control">
                 </div>
-                <button class="btn btn-danger btn-lg">Continue</button>
+                <a class="btn btn-danger btn-lg" href="/user/send-parcel">Continue</a>
             </div>
         </div>
     </div>
