--- a/Webapp/templates/user_profile.html
+++ b/Webapp/templates/user_profile.html
@@ -3,27 +3,32 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <div class="card-img py-3">
-        <img src="{% static 'img/aksh004.jpg' %}" class="profile-img" />
+      <div class="card-img py-3" id="image_container">
+        <img src="{% static 'img/aksh004.jpg' %}" class="profile-img" id="profile_img_display" />
+        <div class="middle" id="text_container">
+          <p class="h6 img_text" id="id_text">Edit</p>
+        </div>
+      </div>
+      <form method="post" enctype="multipart/form-data">
+        <input type="file" class="d-none" id="profile_image" name="profile_image" onchange="readURL(this)" />
+      </form>
+      <div id="img_crop_confirm">
+        <i type="button" class="fa fa-check-circle fa-2x" style="width: 50px" aria-hidden="true" id="confirm"></i>
+        <i type="button" class="fa fa-times-circle fa-2x" type="button" aria-hidden="true" id="cancel"></i>
       </div>
     </div>
     <div class="col-lg-6 my-auto">
       <div class="username dropdown">
-        <p class="h3 ml-3 text-left">Antariksh Sisodiya</p>
-        <i
-          class="my-auto ml-1 mr-5 fas fa-user-edit"
-          type="button"
-          id="dropdownMenuLink"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
+        <p class="h3 ml-3 text-left">{{ detail.name }}</p>
+        <i class="my-auto ml-1 mr-5 fas fa-user-edit" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
         </i>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="/user/edit-profile">Edit profile</a>
           <a class="dropdown-item" href="#">Change password</a>
         </div>
       </div>
+      <p class="ml-3 h6">@{{ user.username }}</p>
       <br />
       <div class="row text-center">
         <div class="col-4 border-right">
@@ -43,20 +48,23 @@
       <div class="">
         <div class="d-flex mx-4">
           <i class="fa fa-phone my-auto" aria-hidden="true"></i>
-          <p class="h6 px-2 ml-1 my-auto">8107227024</p>
+          <p class="h6 px-2 ml-1 my-auto">{{ detail.number1 }}{% if detail.number2 != "" %}, {{ detail.number2 }}{% endif %}</p>
         </div>
         <div class="d-flex mx-4 mt-3">
           <i class="fa fa-envelope my-auto" aria-hidden="true"></i>
-          <p class="h6 px-2 my-auto">sisodiyaaksh@gmail.com</p>
+          <p class="h6 px-2 my-auto">{{ user.email }}</p>
         </div>
         <div class="d-flex mx-4 mt-3">
           <i class="fa fa-map-marker my-auto" aria-hidden="true"></i>
-          <p class="h6 px-2 ml-2 my-auto">
-            33 Ramkrupa nagar, Alwanaka, Manjalpur, Vadodra-390011
-          </p>
+          {% if detail.address != ', , -, , ' %}
+          <p class="h6 px-2 ml-2 my-auto">{{ detail.address }}</p>
+          {% else %}
+          <a href="/user/edit-profile" class="h6 px-2 ml-2 my-auto">Edit Address</a>
+          {% endif %}
         </div>
       </div>
     </div>
   </div>
 </div>
+<script src="{% static 'js/user_profile.js' %}"></script>
 {% endblock %}
