--- a/Webapp/templates/chat.html
+++ b/Webapp/templates/chat.html
@@ -38,7 +38,7 @@
               />
             </div>
             <div class="msg_cotainer" id="msg">
-              {% comment %} {{ msg.p1.msg }} {% endcomment %}
+              {{ msg.p1.msg }}
               <span class="msg_time">{{ msg.p1.time }}</span>
             </div>
           </div>
