--- a/Webapp/templates/send_parcel.html
+++ b/Webapp/templates/send_parcel.html
@@ -322,7 +322,7 @@
       <br />
       <h3>Reciever Details</h3>
       <hr />
-      <div class="form-group col-lg-6">
+      <div class="form-group col-lg-6 search-user">
         <label for="search_user">Search user</label>
         <div class="input-group mb-2">          
           <input type="text" id="search_user" class="form-control" placeholder="Search..." aria-describedby="helpId">
@@ -341,6 +341,9 @@
           </div>          
         </div>        
         <small id="helpId" class="text-muted">You can directly search reciever by name or mobile number.</small>
+        <div class="search-result-container d-none">
+
+        </div>
       </div>
       <br>
       
