--- a/Webapp/templates/send_parcel.html
+++ b/Webapp/templates/send_parcel.html
@@ -668,7 +668,7 @@
               </div>
             </div>
             <input type="number" name="weight" id="" class="form-control" placeholder="weight" />
-            <select name="custom-select form-control" id="">
+            <select class="custom-select form-control" name="weight_unit" id="">
               <option value="g">g</option>
               <option value="Kg">kg</option>
               <option value="p">lb</option>
@@ -679,7 +679,7 @@
           <label for="control-label">Size (Approximate)</label>
           <div class="input-group mb-2">
             <input type="number" name="width" id="" class="form-control" placeholder="width" />
-            <select name="custom-select form-control" id="">
+            <select class="custom-select form-control" name="size_unit" id="">
               <option value="in">in</option>
               <option value="ft">ft</option>
               <option value="cm">cm</option>
@@ -688,7 +688,7 @@
             </select>
             <input type="number" name="height" id="" class="form-control" placeholder="height"
               style="margin-left: 2vh" />
-            <select name="custom-select form-control" id="">
+            <select class="custom-select form-control" name="height_unit" id="">
               <option value="in">in</option>
               <option value="ft">ft</option>
               <option value="cm">cm</option>
@@ -700,7 +700,7 @@
         <div class="form-group col-lg-12">
           <label for="control-label">Description</label>
           <div class="input-group mb-2">
-            <textarea name="" id="" class="form-control" cols="30" rows="5"></textarea>
+            <textarea name="description" id="" class="form-control" cols="30" rows="5"></textarea>
           </div>
         </div>
       </div>
